refact(Referee): seperate analyze from BridgeGame